--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,15 @@
       "name": "Debug",
       "request": "launch",
       "type": "dart"
-    }
+    },
+    {
+      "name": "Drive Mode",
+      "request": "launch",
+      "type": "dart",
+      "args": [
+        "--dart-define",
+        "DRIVE_MODE=true"
+      ]
+    },
   ]
 }
