--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,6 +36,9 @@ dependencies:
   logger:
 
   email_validator:
+
+  testsweets:
+    # path: D:\Code\Clients\FilledStacks\testsweets\packages\testsweets
 
 dev_dependencies:
   flutter_test:
