--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
 
   email_validator:
 
-  testsweets:
-    # path: D:\Code\Clients\FilledStacks\testsweets\packages\testsweets
+  testsweets: # ^1.5.0
+    path: D:\Code\Clients\FilledStacks\testsweets\packages\testsweets
 
 dev_dependencies:
   flutter_test:
