--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner:
+  build_runner: ^2.4.6
 
-  stacked_generator:
+  stacked_generator: ^1.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
