--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   email_validator:
   permission_handler: ^11.1.0
 
-  testsweets: ^1.8.9
+  testsweets:
+    path: /Users/danemackier/Code/packages/testsweets/packages/testsweets
+
 
 dev_dependencies:
   flutter_test:
