--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+9
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -28,12 +28,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  stacked:
+  stacked: ^3.4.1
   stacked_services:
   flutter_hooks:
   logger:
 
   email_validator:
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +42,10 @@ dev_dependencies:
 
   build_runner: ^2.4.6
 
-  stacked_generator: ^1.5.1
+  stacked_generator: ^1.5.2
+
+dependency_overrides:
+  meta: 1.11.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
