--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
-      # - name: 'Set up JDK'
-      #   uses: 'actions/setup-java@v1'
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '21'
+      - name: 'Set up JDK'
+        uses: 'actions/setup-java@v1'
+        with:
+          distribution: 'temurin'
+          java-version: '11'
 
       - uses: subosito/flutter-action@v1.5.3
         with:
