Fix file syntax error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
 
       - name: 'Build APK'
         id: buildApk
-        run: 'flutter build apk --debug
-
+        run: 'flutter build apk --debug'
 
       - name: Enable KVM
         run: |
