--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,36 +22,36 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      - uses: subosito/flutter-action@v1.5.3
-        with:
-          channel: "stable"
+      # - uses: subosito/flutter-action@v1.5.3
+      #   with:
+      #     channel: "stable"
 
-      - name: 'Get all packages'
-        run: flutter pub get
+      # - name: 'Get all packages'
+      #   run: flutter pub get
 
-      - name: 'Build APK'
-        id: buildApk
-        run: 'flutter build apk --debug'
+      # - name: 'Build APK'
+      #   id: buildApk
+      #   run: 'flutter build apk --debug'
 
-      # - name: Enable KVM
-      #   run: |
-      #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-      #     sudo udevadm control --reload-rules
-      #     sudo udevadm trigger --name-match=kvm
+      # # - name: Enable KVM
+      # #   run: |
+      # #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+      # #     sudo udevadm control --reload-rules
+      # #     sudo udevadm trigger --name-match=kvm
 
-      - name: Set up Homebrew
-        id: set-up-homebrew
-        uses: Homebrew/actions/setup-homebrew@master
+      # - name: Set up Homebrew
+      #   id: set-up-homebrew
+      #   uses: Homebrew/actions/setup-homebrew@master
       
-      - name: Install TestSweets
-        run: |
-          brew tap filledstacks/tap
-          brew install testsweets
+      # - name: Install TestSweets
+      #   run: |
+      #     brew tap filledstacks/tap
+      #     brew install testsweets
       
       - name: Start Emulator
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 31
+          api-level: 29
           script: ./gradlew connectedCheck
       
       - name: Run TestSweets Test
