--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   testsweets_tests:
-    runs-on: macos-latest
+    runs-on: macos-latest-large
 
     outputs:
       built-apk: ${{ steps.buildApk.outputs.apkPath }}
