--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,5 +54,8 @@ jobs:
       #     api-level: 29
       #     script: echo "Android Emulator Running"
       
+      - name: TestSweets Authenticate
+        run: dart bin/testsweets_cli.dart authenticate -e ${{ secrets.TESTSWEETS_EMAIL_ACCOUNT }} -p ${{ secrets.TESTSWEETS_PASSWORD }}
+
       - name: Run TestSweets Tests
         run: testsweets run -p qA5ua2TOgxBtMGcSVBGE -a build/app/outputs/flutter-apk/app-debug.apk
