--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,60 +6,62 @@ on:
 
 jobs:
   testsweets_tests:
-    runs-on: macos-14 # use macos-14 insted of macos-latest-large as that is based on M1 (  https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners/about-github-hosted-runners#:~:text=N/A-,macOS,N/A,-Standard%20GitHub%2Dhosted ) 
-
-    # outputs:
-    #   built-apk: ${{ steps.buildApk.outputs.apkPath }}
+    runs-on: macos-latest
 
     steps:
-      - name: checkout
+      # Step to checkout the repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 'Set up JDK'
-        uses: actions/setup-java@v1
+      # Set up JDK to compile Flutter Apk, Reference Here:- https://github.com/actions/setup-java
+      - uses: actions/setup-java@v1
         with:
-          java-version: '12.x'
+          java-version: '12.x' #  works fine for me Change That as Per Your Need If There is ANy Error in Future
 
-      - uses: subosito/flutter-action@v2
+      # Step to setup Flutter with stable channel, Reference Here:- https://github.com/subosito/flutter-action
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          channel: "stable" # No need , But Just for Refernce
 
+      # Step to check Flutter version
       - name: Check Flutter version
         run: flutter doctor -v
+
+      # Step to get all Flutter packages
       - name: Get all packages Flutter
         run: flutter pub get
+
+      # Step to build debug APK with Flutter
       - name: Flutter Build debug APK
         id: buildApk
         run: flutter build apk --debug --dart-define=FORCE_CAPTURE_MODE=false
-
-
-      # - name: Enable KVM
-      #   run: |
-      #     echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-      #     sudo udevadm control --reload-rules
-      #     sudo udevadm trigger --name-match=kvm
-
-      - name: Setup Homebrew
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
       
+      # Step to install TestSweets using Homebrew
       - name: Install TestSweets
         run: |
           brew tap filledstacks/tap
           brew install testsweets
       
-      # - name: Start Emulator and Run TestSweets # TODO: Currently we have to find the Alternative for this only
-      #   uses: reactivecircus/android-emulator-runner@v2
-      #   with:
-      #     api-level: 29
-      #     script: echo "Android Emulator Running"
+      # Step to view system hardware information
+      - name: View System Hardware Information
+        run: system_profiler SPHardwareDataType
 
-      - uses: futureware-tech/simulator-action@v3
-        with:
-          model: 'iPhone 8'
-      
+      # Step to start the Android Emulator
+      - name: Starting Android Emulator (Takes Time)
+        run: |
+          echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install 'system-images;android-30;google_apis;x86'
+          echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n android_emulator -k 'system-images;android-30;google_apis;x86' --force --device "pixel_6"
+          echo "Emulator created successfully"
+          nohup $ANDROID_HOME/emulator/emulator -memory 2048 -avd android_emulator -skin 1080x1920 -no-snapshot -netdelay none -netspeed full -no-audio -no-boot-anim -accel auto -gpu guest -qemu -lcd-density 420 > /dev/null 2>&1 &
+          $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done'
+          $ANDROID_HOME/platform-tools/adb devices
+          $ANDROID_HOME/platform-tools/adb shell input keyevent 82
+          
+      # Step to Authenticate TestSweets Using Email and Password Stored in Github Secret
       - name: TestSweets Authenticate
         run: testsweets authenticate -e ${{ secrets.TESTSWEETS_EMAIL_ACCOUNT }} -p ${{ secrets.TESTSWEETS_PASSWORD }}
 
+      # Step to run TestSweets tests
       - name: Run TestSweets Tests
         run: testsweets run -p qA5ua2TOgxBtMGcSVBGE -a build/app/outputs/flutter-apk/app-debug.apk
